--- a/abstract/index.html
+++ b/abstract/index.html
@@ -120,6 +120,7 @@
             </div>
         </section>
         </footer>
-        <button>? Help</button>
+        
+        <button id="help">? Help</button>
 </body>
 </html>
