--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Esta es la pagina de inicio</h1>
     <ul>
-        <li><a href="./index.html">Abstract</a></li>
+        <li><a href="./abstract/index.html">Abstract</a></li>
     </ul>
 </body>
 </html>
