--- a/abstract/index.html
+++ b/abstract/index.html
@@ -7,6 +7,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/base.css">
+    <link rel="stylesheet" href="./styles/large.css">
     <title>Asbtract</title>
 </head>
 <body>
@@ -18,9 +19,12 @@
             <h2> Help Center</h2>
         </div>
         <div class="buttons">
+            <div id="buttons-container">
             <input class="rounded" type="text" placeholder="Search">
-            <button class="rounded" id="submit">Submit a Request</button>
-            <button class="rounded" id="sign-in">Sign in</button>
+                <button class="rounded" id="submit">Submit a Request</button>
+                <button class="rounded" id="sign-in">Sign in</button>
+            </div>
+            <button type="button" id="menu"></button>
         </div>
     </header>
     <main>
