--- a/abstract/index.html
+++ b/abstract/index.html
@@ -19,8 +19,10 @@
             <h2> Help Center</h2>
         </div>
         <div class="buttons">
+            <div id="input-container">
+                <input class="rounded" type="text" placeholder="Search">
+            </div>
             <div id="buttons-container">
-            <input class="rounded" type="text" placeholder="Search">
                 <button class="rounded" id="submit">Submit a Request</button>
                 <button class="rounded" id="sign-in">Sign in</button>
             </div>
@@ -126,5 +128,6 @@
         </footer>
         
         <button id="help">? Help</button>
+        <script src="./scripts/hamburguer.js"></script>
 </body>
 </html>
