--- a/netflix/index.html
+++ b/netflix/index.html
@@ -8,24 +8,25 @@
 </head>
 <body>
     <div class="hero">
-        <div class="overlay">
 
             <header>
-                <h1>Netflix</h1>
                 <div>
-                    <button>Español</button>
+                    <img class="logo" src="./images/logo.png" alt="logo">
+                    <p>De Christian</p>
+                </div>
+                <div>
+                    <button class="language">Español</button>
                     <button class="red-button">Iniciar Sesion</button>
                 </div>
             </header> 
             <div class="mainer">
                 <h1>Peliculas y series ilimitadas y mucho más</h1>
-                <h3>A partir de USD 6.99. Cancela cuando quieras.</h3>
-                <p>¿Quieres ver Netflix ya? Ingresa tu email para crear una cuenta o reiniciar tu membresía de Netflix</p>
-                <div>
+                <p class="slogan">A partir de USD 6.99. Cancela cuando quieras.</p>
+                <p class="hero-text">¿Quieres ver Netflix ya? Ingresa tu email para crear una cuenta o reiniciar tu membresía de Netflix</p>
+                <div class="email-login">
                     <input type="email" id="email">
                     <button class="red-button">Comenzar</button>
                 </div>
-            </div>
         </div>
         </div>
     <main>
