--- a/netflix/index.html
+++ b/netflix/index.html
@@ -24,16 +24,40 @@
                 <p class="slogan">A partir de USD 6.99. Cancela cuando quieras.</p>
                 <p class="hero-text">¿Quieres ver Netflix ya? Ingresa tu email para crear una cuenta o reiniciar tu membresía de Netflix</p>
                 <div class="email-login">
-                    <input type="email" id="email">
-                    <button class="red-button">Comenzar</button>
+                    <input type="email" id="email" placeholder="Email">
+                    <button class="start-button">Comenzar ></button>
                 </div>
         </div>
+        
         </div>
     <main>
-    <section>
+    <section class="trends">
         <h2>Tendencias</h2>
-        <div>
-
+        <div class="poster-container">
+            <div class="poster">
+                <img class="poster-image" src="./images/future.webp" alt="trending 1">
+                <h1 class="poster-number">1</h1>
+            </div>
+            <div class="poster">
+                <img class="poster-image" src="./images/future.webp" alt="trending 1">
+                <h1 class="poster-number">1</h1>
+            </div>
+            <div class="poster">
+                <img class="poster-image" src="./images/future.webp" alt="trending 1">
+                <h1 class="poster-number">1</h1>
+            </div>
+            <div class="poster">
+                <img class="poster-image" src="./images/future.webp" alt="trending 1">
+                <h1 class="poster-number">1</h1>
+            </div>
+            <div class="poster">
+                <img class="poster-image" src="./images/future.webp" alt="trending 1">
+                <h1 class="poster-number">1</h1>
+            </div>
+            <div class="poster">
+                <img class="poster-image" src="./images/future.webp" alt="trending 1">
+                <h1 class="poster-number">1</h1>
+            </div>
         </div>
     </section>
     <section>
